# DentalApp

./: .gitignore  CMakeLists.txt  DentalApp.cpp  DentalApp.h  DentalApp.ui  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
